--- a/index.html
+++ b/index.html
@@ -7,10 +7,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C2-Ejercicio9-pets</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
-
+    <header class="cabecera">
+        <img src="/imagenes/logo2.png" alt="Logotipo huella naranja">
+        <nav class="navegacion">
+            <ul>
+                <li>Home</li>
+                <li>Live Demo<i></i>
+                    <ul>
+                        <li>Pets Boarding Service</li>
+                        <li>Pets Toys and Food Shop</li>
+                        <li>Pets Training School</li>
+                    </ul>
+                </li>
+                <li>Live Demo Blocks<i></i></li>
+            </ul>
+        </nav>
+        <button>BUY NOW</button>
+    </header>
+    <main class="contenedor-principal">
+        <h1>Pet activities</h1>
+        Take a closer look
+        <button>VIEW ALL</button>
+        <section>
+            <h2>Activities</h2>
+            <h3>Toys Playtime</h3>
+            <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" />
+        </section>
+        <section>
+            <h2>Activities</h2>
+            <h3>Active Rest</h3>
+            <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" />
+        </section>
+        <section>
+            <h2>Activities</h2>
+            <h3>Game walks</h3>
+            <img src="/imagenes/03.jpg" alt="Perro corriendo">
+        </section>
+    </main>
 </body>
 
 </html>
