--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header class="cabecera">
         <img src="/imagenes/logo2.png" alt="Logotipo huella naranja">
         <nav class="navegacion">
-            <ul>
+            <ul class="list-unstyled">
                 <li>Home</li>
                 <li>Live Demo<i></i>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li>Pets Boarding Service</li>
                         <li>Pets Toys and Food Shop</li>
                         <li>Pets Training School</li>
