--- a/index.html
+++ b/index.html
@@ -2,56 +2,66 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C2-Ejercicio9-pets</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>C2-Ejercicio9-pets</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header class="cabecera">
-        <img src="/imagenes/logo2.png" alt="Logotipo huella naranja">
-        <nav class="navegacion">
+  <header class="cabecera container-fluid">
+    <div class="row">
+      <img src="/imagenes/logo2.png" alt="Logotipo huella naranja" class="s">
+      <nav class="navegacion col">
+        <ul class="list-unstyled row">
+          <li class="col">Home</li>
+          <li class="col">Live Demo<i></i>
             <ul class="list-unstyled">
-                <li>Home</li>
-                <li>Live Demo<i></i>
-                    <ul class="list-unstyled">
-                        <li>Pets Boarding Service</li>
-                        <li>Pets Toys and Food Shop</li>
-                        <li>Pets Training School</li>
-                    </ul>
-                </li>
-                <li>Live Demo Blocks<i></i></li>
+              <li>Pets Boarding Service</li>
+              <li>Pets Toys and Food Shop</li>
+              <li>Pets Training School</li>
             </ul>
-        </nav>
-        <button>BUY NOW</button>
-    </header>
-    <main class="contenedor-principal">
-        <h1>Pet activities</h1>
-        Take a closer look
-        <button>VIEW ALL</button>
-        <section>
-            <h2>Activities</h2>
-            <h3>Toys Playtime</h3>
-            <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" />
+          </li>
+          <li class="col">Live Demo Blocks<i></i></li>
+        </ul>
+      </nav>
+
+      <button class="col-1">BUY NOW</button>
+    </div>
+  </header>
+  <main class="contenedor-principal">
+    <div class="container-fluid">
+      <h1>Pet activities</h1>
+      Take a closer look
+      <button>VIEW ALL</button>
+      <div class="row">
+        <section class="col">
+          <h2>Activities</h2>
+          <h3>Toys Playtime</h3>
+          <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" />
         </section>
-        <section>
-            <h2>Activities</h2>
-            <h3>Active Rest</h3>
-            <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" />
+        <section class="col">
+          <h2>Activities</h2>
+          <h3>Active Rest</h3>
+          <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" />
         </section>
-        <section>
-            <h2>Activities</h2>
-            <h3>Game walks</h3>
-            <img src="/imagenes/03.jpg" alt="Perro corriendo">
+        <section class="col">
+          <h2>Activities</h2>
+          <h3>Game walks</h3>
+          <img src="/imagenes/03.jpg" alt="Perro corriendo">
         </section>
-    </main>
+      </div>
+
+    </div>
+  </main>
 </body>
 
 </html>
