hover+estructures header

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 </head>
 
 <body>
-  <header class="cabecera container-fluid">
+  <header class="cabecera container">
     <div class="row">
       <img src="/imagenes/logo2.png" alt="Logotipo huella naranja" class="s">
       <nav class="navegacion col">
-        <ul class="list-unstyled row">
-          <li class="col">Home</li>
-          <li class="col">Live Demo<i></i>
+        <ul class="list-unstyled row ">
+          <li class="col-0  col-sm text-right">Home</li>
+          <li class="col-0  col-sm text-right">Live Demo<i></i>
             <ul class="list-unstyled">
               <li>Pets Boarding Service</li>
               <li>Pets Toys and Food Shop</li>
               <li>Pets Training School</li>
             </ul>
           </li>
-          <li class="col">Live Demo Blocks<i></i></li>
+          <li class="col-0 col-sm text-right">Live Demo Blocks<i></i></li>
         </ul>
       </nav>
 
@@ -41,22 +41,22 @@
     <div class="container-fluid">
       <h1>Pet activities</h1>
       Take a closer look
-      <button>VIEW ALL</button>
+      <button class="viewall">VIEW ALL</button>
       <div class="row">
-        <section class="col">
+        <section class="col-12 col-md">
           <h2>Activities</h2>
           <h3>Toys Playtime</h3>
-          <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" />
+          <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" class="img-fluid" />
         </section>
-        <section class="col">
+        <section class="col-12 col-md">
           <h2>Activities</h2>
           <h3>Active Rest</h3>
-          <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" />
+          <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" class="img-fluid"/>
         </section>
-        <section class="col">
+        <section class="col-12 col-md">
           <h2>Activities</h2>
           <h3>Game walks</h3>
-          <img src="/imagenes/03.jpg" alt="Perro corriendo">
+          <img src="/imagenes/03.jpg" alt="Perro corriendo" class="img-fluid">
         </section>
       </div>
 
