psoicionamiento titulo y colores

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
   <main class="contenedor-principal">
     <div class="container-fluid">
       <h1>Pet activities</h1>
-      Take a closer look
-      <button class="viewall">VIEW ALL</button>
+      <div class="row">
+      <div class="closer col-10 ">Take a closer look</div>
+      <button class="viewall col-12 col-md-2">VIEW ALL</button>
+      </div>
       <div class="row">
         <section class="col-12 col-md">
           <h2>Activities</h2>
