--- a/index.html
+++ b/index.html
@@ -2,68 +2,68 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>C2-Ejercicio9-pets</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>C2-Ejercicio9-pets</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <header class="cabecera container">
-    <div class="row">
-      <img src="/imagenes/logo2.png" alt="Logotipo huella naranja" class="s">
-      <nav class="navegacion col">
-        <ul class="list-unstyled row ">
-          <li class="col-0  col-sm text-right">Home</li>
-          <li class="col-0  col-sm text-right">Live Demo<i></i>
-            <ul class="list-unstyled">
-              <li>Pets Boarding Service</li>
-              <li>Pets Toys and Food Shop</li>
-              <li>Pets Training School</li>
-            </ul>
-          </li>
-          <li class="col-0 col-sm text-right">Live Demo Blocks<i></i></li>
-        </ul>
-      </nav>
+    <header class="cabecera">
+        <div class="container">
+            <nav class="row">
+                <div class="col-2 text-left"><img src="/imagenes/logo2.png" alt="Logotipo huella naranja" width="66" height="66"></div>
+                <div class="col-10">
+                    <ul class="links row d-none d-lg-flex list-unstyled justify-content-end">
+                        <li class="link">Home</li>
+                        <li class="link">Live Demo<i class="icono fas fa-sort-down"></i>
+                            <ul class="dropdown list-unstyled">
+                                <li>Pets Boarding Service</li>
+                                <li>Pets Toys and Food Shop</li>
+                                <li>Pets Training School</li>
+                                <li></li>
+                            </ul>
+                        </li>
+                        <li class="link">Live Demo Blocks<i class="icono fas fa-sort-down"></i></li>
+                        <li><button class="btn btn-page btn-buynow">BUY NOW</button></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main class="contenedor-principal">
+        <div class="container-fluid">
+            <h1>Pet activities</h1>
+            <div class="row">
+                <div class="closer col-10 ">Take a closer look</div>
+                <button class="btn btn-page btn-viewall col-12 col-md-2">VIEW ALL</button>
+            </div>
+            <div class="row">
+                <section class="col-12 col-md">
+                    <h2>Activities</h2>
+                    <h3>Toys Playtime</h3>
+                    <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" class="img-fluid" />
+                </section>
+                <section class="col-12 col-md">
+                    <h2>Activities</h2>
+                    <h3>Active Rest</h3>
+                    <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" class="img-fluid" />
+                </section>
+                <section class="col-12 col-md">
+                    <h2>Activities</h2>
+                    <h3>Game walks</h3>
+                    <img src="/imagenes/03.jpg" alt="Perro corriendo" class="img-fluid">
+                </section>
+            </div>
 
-      <button class="col-1">BUY NOW</button>
-    </div>
-  </header>
-  <main class="contenedor-principal">
-    <div class="container-fluid">
-      <h1>Pet activities</h1>
-      <div class="row">
-      <div class="closer col-10 ">Take a closer look</div>
-      <button class="viewall col-12 col-md-2">VIEW ALL</button>
-      </div>
-      <div class="row">
-        <section class="col-12 col-md">
-          <h2>Activities</h2>
-          <h3>Toys Playtime</h3>
-          <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" class="img-fluid" />
-        </section>
-        <section class="col-12 col-md">
-          <h2>Activities</h2>
-          <h3>Active Rest</h3>
-          <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" class="img-fluid"/>
-        </section>
-        <section class="col-12 col-md">
-          <h2>Activities</h2>
-          <h3>Game walks</h3>
-          <img src="/imagenes/03.jpg" alt="Perro corriendo" class="img-fluid">
-        </section>
-      </div>
-
-    </div>
-  </main>
+        </div>
+    </main>
 </body>
 
 </html>
