Cambio clases cabecera

--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
             <nav class="row">
                 <div class="col-2 text-left"><img src="/imagenes/logo2.png" alt="Logotipo huella naranja" width="66" height="66"></div>
                 <div class="col-10">
-                    <ul class="links row d-none d-lg-flex list-unstyled justify-content-end">
-                        <li class="link">Home</li>
-                        <li class="link">Live Demo<i class="icono fas fa-sort-down"></i>
-                            <ul class="dropdown list-unstyled">
-                                <li>Pets Boarding Service</li>
-                                <li>Pets Toys and Food Shop</li>
-                                <li>Pets Training School</li>
-                                <li></li>
-                            </ul>
+                    <ul class="links d-none d-lg-flex list-unstyled justify-content-end m-0 h-100">
+                        <li class="link my-auto">Home</li>
+                        <li class="link position-relative my-auto active position-relative">Live Demo<i class="icono fas fa-sort-down"></i>
+                            <div class="dropdown">
+                                <ul class="dropdown-list list-unstyled">
+                                    <li>Pets Boarding Service</li>
+                                    <li>Pets Toys and Food Shop</li>
+                                    <li class="active">Pets Training School</li>
+                                </ul>
+                            </div>
                         </li>
-                        <li class="link">Live Demo Blocks<i class="icono fas fa-sort-down"></i></li>
-                        <li><button class="btn btn-page btn-buynow">BUY NOW</button></li>
+                        <li class="link my-auto">Live Demo Blocks<i class="icono fas fa-sort-down"></i></li>
+                        <li class="my-auto"><button class="btn btn-page btn-buynow my-auto">BUY NOW</button></li>
                     </ul>
                 </div>
             </nav>
