Clases de actividades modificadas

--- a/index.html
+++ b/index.html
@@ -39,30 +39,29 @@
         </div>
     </header>
     <main class="contenedor-principal">
-        <div class="container-fluid">
+        <div class="container">
             <h1>Pet activities</h1>
             <div class="row">
                 <div class="closer col-10 ">Take a closer look</div>
                 <button class="btn btn-page btn-viewall col-12 col-md-2">VIEW ALL</button>
             </div>
-            <div class="row">
-                <section class="col-12 col-md">
-                    <h2>Activities</h2>
-                    <h3>Toys Playtime</h3>
-                    <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" class="img-fluid" />
+            <div class="activities row text-center">
+                <section class="activity col-10 col-lg-4 position-relative">
+                    <h2 class="title m-0">Activities</h2>
+                    <h3 class="name m-0">Toys Playtime</h3>
+                    <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" class="img-activity img-fluid" />
                 </section>
-                <section class="col-12 col-md">
-                    <h2>Activities</h2>
-                    <h3>Active Rest</h3>
-                    <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" class="img-fluid" />
+                <section class="activity col-10 col-lg-4 position-relative">
+                    <h2 class="title m-0">Activities</h2>
+                    <h3 class="name m-0">Active Rest</h3>
+                    <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" class="img-activity img-fluid" />
                 </section>
-                <section class="col-12 col-md">
-                    <h2>Activities</h2>
-                    <h3>Game walks</h3>
-                    <img src="/imagenes/03.jpg" alt="Perro corriendo" class="img-fluid">
+                <section class="activity col-10 col-lg-4 position-relative">
+                    <h2 class="title m-0">Activities</h2>
+                    <h3 class="name m-0">Game walks</h3>
+                    <img src="/imagenes/03.jpg" alt="Perro corriendo" class="img-activity img-fluid">
                 </section>
             </div>
-
         </div>
     </main>
 </body>
