Estilos de la cabecera del main cambiados y adaptados tanto para mobile como desktop

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </header>
     <main class="contenedor-principal">
         <div class="container">
-            <h1>Pet activities</h1>
-            <div class="row">
-                <div class="closer col-10 ">Take a closer look</div>
-                <button class="btn btn-page btn-viewall col-12 col-md-2">VIEW ALL</button>
+            <div class="cabecera-main row">
+                <h1 class="title-page col-12 text-center text-lg-left m-0">Pet activities</h1>
+                <div class="closer col-12 col-lg-9 text-center text-lg-left"><span>Take a closer look</span></div>
+                <div class="container-viewall col-12 col-lg-3 text-center text-lg-left"><button class="btn btn-page btn-viewall">VIEW ALL</button></div>
             </div>
             <div class="activities row text-center">
                 <section class="activity col-10 col-lg-4 position-relative">
