Color naranja de los li del dropdown se pone cuando hacemos hover

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <ul class="dropdown-list list-unstyled">
                                     <li>Pets Boarding Service</li>
                                     <li>Pets Toys and Food Shop</li>
-                                    <li class="active">Pets Training School</li>
+                                    <li>Pets Training School</li>
                                 </ul>
                             </div>
                         </li>
