--- a/index.html
+++ b/index.html
@@ -2,68 +2,78 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C2-Ejercicio9-pets</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>C2-Ejercicio9-pets</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header class="cabecera">
-        <div class="container">
-            <nav class="row">
-                <div class="col-2 text-left"><img src="/imagenes/logo2.png" alt="Logotipo huella naranja" width="66" height="66"></div>
-                <div class="col-10">
-                    <ul class="links d-none d-lg-flex list-unstyled justify-content-end m-0 h-100">
-                        <li class="link my-auto">Home</li>
-                        <li class="link position-relative my-auto active position-relative">Live Demo<i class="icono fas fa-sort-down"></i>
-                            <div class="dropdown">
-                                <ul class="dropdown-list list-unstyled">
-                                    <li>Pets Boarding Service</li>
-                                    <li>Pets Toys and Food Shop</li>
-                                    <li>Pets Training School</li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="link my-auto">Live Demo Blocks<i class="icono fas fa-sort-down"></i></li>
-                        <li class="my-auto"><button class="btn btn-page btn-buynow my-auto">BUY NOW</button></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
-    <main class="contenedor-principal">
-        <div class="container">
-            <div class="cabecera-main row">
-                <h1 class="title-page col-12 text-center text-lg-left m-0">Pet activities</h1>
-                <div class="closer col-12 col-lg-9 text-center text-lg-left"><span>Take a closer look</span></div>
-                <div class="container-viewall col-12 col-lg-3 text-center text-lg-left"><button class="btn btn-page btn-viewall">VIEW ALL</button></div>
-            </div>
-            <div class="activities row text-center">
-                <section class="activity col-10 col-lg-4 position-relative">
-                    <h2 class="title m-0">Activities</h2>
-                    <h3 class="name m-0">Toys Playtime</h3>
-                    <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" class="img-activity img-fluid" />
-                </section>
-                <section class="activity col-10 col-lg-4 position-relative">
-                    <h2 class="title m-0">Activities</h2>
-                    <h3 class="name m-0">Active Rest</h3>
-                    <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" class="img-activity img-fluid" />
-                </section>
-                <section class="activity col-10 col-lg-4 position-relative">
-                    <h2 class="title m-0">Activities</h2>
-                    <h3 class="name m-0">Game walks</h3>
-                    <img src="/imagenes/03.jpg" alt="Perro corriendo" class="img-activity img-fluid">
-                </section>
-            </div>
-        </div>
-    </main>
+  <header class="cabecera navbar navbar-expand-lg">
+    <div class="container">
+      <nav class="row ">
+        <div class="col-2 justify-content-end align-items-end"><img src="/imagenes/logo2.png" alt="Logotipo huella naranja" width="66"
+            height="66"></div>
+        <button class="navbar-toggler col" type="button" data-toggle="collapse" data-target="#navbar"
+          aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="menu fas fa-bars icono-dropdown navbar-toggler-icon"></i>
+        </button>
+
+        <nav class="navegacion collapse navbar-collapse align-items-end justify-content-end col col-lg-10" id="navbar">
+          <ul class="links d-none d-lg-flex list-unstyled justify-content-end m-0 h-100">
+            <li class="link nav-item my-auto">Home</li>
+            <li class="link nav-item position-relative my-auto active position-relative">Live Demo<i
+                class="icono fas fa-sort-down"></i>
+              <div class="dropdown">
+                <ul class="dropdown-list list-unstyled">
+                  <li class="dropdown-item">Pets Boarding Service</li>
+                  <li class="dropdown-item">Pets Toys and Food Shop</li>
+                  <li class="dropdown-item">Pets Training School</li>
+                </ul>
+              </div>
+            </li>
+            <li class="link nav-item my-auto">Live Demo Blocks<i class="icono fas fa-sort-down"></i></li>
+            <li class="my-auto nav-item"><button class="btn btn-page btn-buynow my-auto">BUY NOW</button></li>
+          </ul>
+        </nav>
+      </nav>
+    </div>
+  </header>
+  <main class="contenedor-principal">
+    <div class="container">
+      <div class="cabecera-main row">
+        <h1 class="title-page col-12 text-center text-lg-left m-0">Pet activities</h1>
+        <div class="closer col-12 col-lg-9 text-center text-lg-left"><span>Take a closer look</span></div>
+        <div class="container-viewall col-12 col-lg-3 text-center text-lg-left"><button
+            class="btn btn-page btn-viewall">VIEW ALL</button></div>
+      </div>
+      <div class="activities row text-center">
+        <section class="activity col-10 col-lg-4 position-relative">
+          <h2 class="title m-0">Activities</h2>
+          <h3 class="name m-0">Toys Playtime</h3>
+          <img src="/imagenes/01.jpg" alt="Perro mordiendo juguete" class="img-activity img-fluid" />
+        </section>
+        <section class="activity col-10 col-lg-4 position-relative">
+          <h2 class="title m-0">Activities</h2>
+          <h3 class="name m-0">Active Rest</h3>
+          <img src="/imagenes/02.jpg" alt="Gatito escondido debajo de una alfombra" class="img-activity img-fluid" />
+        </section>
+        <section class="activity col-10 col-lg-4 position-relative">
+          <h2 class="title m-0">Activities</h2>
+          <h3 class="name m-0">Game walks</h3>
+          <img src="/imagenes/03.jpg" alt="Perro corriendo" class="img-activity img-fluid">
+        </section>
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
