--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>C2-Ejercicio9-pets</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="imagenes/logo2.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -17,17 +17,14 @@
 </head>
 
 <body>
-  <header class="cabecera navbar navbar-expand-lg">
+  <header class="cabecera">
     <div class="container">
-      <nav class="row ">
-        <div class="col-2 justify-content-end align-items-end"><img src="/imagenes/logo2.png" alt="Logotipo huella naranja" width="66"
+      <nav class="row navbar-expand">
+        <div class="col-2 justify-content-end"><img src="/imagenes/logo2.png" alt="Logotipo huella naranja" width="66"
             height="66"></div>
-        <button class="navbar-toggler col" type="button" data-toggle="collapse" data-target="#navbar"
-          aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="menu fas fa-bars icono-dropdown navbar-toggler-icon"></i>
-        </button>
 
-        <nav class="navegacion collapse navbar-collapse align-items-end justify-content-end col col-lg-10" id="navbar">
+        <nav class="navegacion col-10 navbar-collapse align-items-center justify-content-end">
+          <i class="icona fa-2x d-flex fas fa-bars align-items-center justify-content-end"></i>
           <ul class="links d-none d-lg-flex list-unstyled justify-content-end m-0 h-100">
             <li class="link nav-item my-auto">Home</li>
             <li class="link nav-item position-relative my-auto active position-relative">Live Demo<i
